--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
+    "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
