--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.15.7",
+    "@mui/x-charts": "^6.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "express": "^4.18.2",
     "formik": "^2.4.5",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
@@ -27,6 +34,7 @@
     "sweetalert2": "^11.10.4",
     "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
+    "wowjs": "^1.1.3",
     "yup": "^1.3.3"
   },
   "scripts": {
