--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "animejs": "^3.2.2",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
@@ -29,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "sweetalert2": "^11.10.4",
